--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=banking-app
+spring.h2.console.enabled=true
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:bankingAPI-db
+spring.jpa.hibernate.ddl-auto=create-drop
