--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=banking-app
+# Enable H2 console
+spring.h2.console.enabled=true
+# Allow all requests to H2 console
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:banking-app-db;NON_KEYWORDS=year
