--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,11 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.1</version>
 		</dependency>
-	</dependencies>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
