--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,17 @@ spring.h2.console.enabled=true
 # Allow all requests to H2 console
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:banking-app-db;NON_KEYWORDS=year
+
+server.port=8080
+server.ssl.key-store=classpath:newkeystore.p12
+server.ssl.key-alias=BankingAPI
+server.ssl.key-store-password=inholland
+server.ssl.key-store-type=PKCS12
+server.ssl.enabled=false
+
+application.max.content.size=100
+application.token.validity=3600000
+jwt.key-store=newkeystore.p12
+jwt.key-alias=BankingAPI
+jwt.key-store-password=inholland
+jwt.key-store-type=PKCS12
