--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,11 @@
 			<artifactId>jaxb-core</artifactId>
 			<version>4.0.5</version>
 		</dependency>
-		<dependency>
-			<groupId>dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-			<version>1.1</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>dom4j</groupId>-->
+<!--			<artifactId>dom4j</artifactId>-->
+<!--			<version>1.1</version>-->
+<!--		</dependency>-->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -105,18 +105,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.2.5</version> <!-- Ensures compatibility with your Spring Boot version -->
 		</dependency>
-	</dependencies>
 
 
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+
 
 
         <dependency>
@@ -158,5 +150,12 @@
             </plugin>
         </plugins>
     </build>
-
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
