--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.h2.console.enabled=true
 # Allow all requests to H2 console
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:banking-app-db;NON_KEYWORDS=year
-
+spring.datasource.username=sa
+spring.datasource.password=password
 
 server.port=8080
 server.ssl.key-store=classpath:newkeystore.p12
