--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,8 @@ spring.h2.console.enabled=true
 # Allow all requests to H2 console
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:banking-app-db;NON_KEYWORDS=year
-
+spring.datasource.username=sa
+spring.datasource.password=password
 
 server.port=8080
 server.ssl.key-store=classpath:newkeystore.p12
@@ -19,3 +20,4 @@ jwt.key-store=newkeystore.p12
 jwt.key-alias=BankingAPI
 jwt.key-store-password=inholland
 jwt.key-store-type=PKCS12
+application.token.secret=your_secret_key_here
